--- a/whycpp_js/html/index.html
+++ b/whycpp_js/html/index.html
@@ -71,6 +71,23 @@
           })(),
           canvas: document.getElementById('canvas'),
       };
+      // Work-around chromium autoplay policy
+      // https://github.com/emscripten-core/emscripten/issues/6511
+      function resumeAudio(e) {
+          if (typeof Module === 'undefined'
+                  || typeof Module.SDL2 == 'undefined'
+                  || typeof Module.SDL2.audioContext == 'undefined')
+              return;
+          if (Module.SDL2.audioContext.state == 'suspended') {
+              Module.SDL2.audioContext.resume();
+          }
+          if (Module.SDL2.audioContext.state == 'running') {
+              document.getElementById('canvas').removeEventListener('click', resumeAudio);
+              document.removeEventListener('keydown', resumeAudio);
+          }
+      }
+      document.getElementById('canvas').addEventListener('click', resumeAudio);
+      document.addEventListener('keydown', resumeAudio);
     </script>
 <script async type="text/javascript" src="whycpp_js.js"></script>
 </body>
