split example_js and whycpp_js - extract main file

--- a/example_js/index.html
+++ b/example_js/index.html
@@ -89,6 +89,6 @@
       document.getElementById('canvas').addEventListener('click', resumeAudio);
       document.addEventListener('keydown', resumeAudio);
     </script>
-<script async type="text/javascript" src="whycpp_js.js"></script>
+<script async type="text/javascript" src="example_js.js"></script>
 </body>
 </html>
